01 - OpenCRVS Documentation/v1.4/setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.5-set-up-application-settings/4.2.5.2-configuring-metabase-dashboards.md
---
title: "4.2.5.2 Configuring Metabase Dashboards"
source_url: "https://documentation.opencrvs.org/v1.4/setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.5-set-up-application-settings/4.2.5.2-configuring-metabase-dashboards"
markdown_url: "https://documentation.opencrvs.org/v1.4/setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.5-set-up-application-settings/4.2.5.2-configuring-metabase-dashboards.md"
version: "v1.4"
retrieved_at: "2026-09-16T15:06:42Z"
content_hash: "sha256:9f7aee1c0a98865c62529591933151e87cb25a6c45581a5f20437989b190dacb"
---

> For the complete documentation index, see [llms.txt](https://documentation.opencrvs.org/llms.txt). Markdown versions of documentation pages are available by appending `.md` to page URLs; this page is available as [Markdown](https://documentation.opencrvs.org/v1.4/setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.5-set-up-application-settings/4.2.5.2-configuring-metabase-dashboards.md).

# 4.2.5.2 Configuring Metabase Dashboards

{% embed url="<https://www.youtube.com/watch?v=nu0obCCmZak>" %}

OpenCRVS includes a self-hosted, pre-configured Dashboards service, built on Metabase. In deployed environments, these dashboards can be found in the `metabase.<your domain>` address.&#x20;

The recommended way of customising OpenCRVS dashboards is in a local development environment, during the development phase of the project. It is also possible to customise the dashboards through the Metabase UI once the environment has been deployed but to keep environments consistent and all configuration in version control, we do not recommend this. All changes to production OpenCRVS environments should always be implemented by a developer, committed to version control, thoroughly tested, and only then deployed.

To begin customising the dashboards, first initiate your local dashboards instance by navigating to `packages/dashboards` and executing `yarn start`. In development environments, the dashboard service is not automatically started because it consumes significant memory and is not essential for most local development tasks. \
After running the command, the dashboards can be accessed using the URL `http://localhost:4444/`.

```bash
cd packages/dashboards
yarn start
```

<figure><img src="https://2365243258-files.gitbook.io/~/files/v0/b/gitbook-x-prod.appspot.com/o/spaces%2FCCxReqNLi05GgVKnwb07%2Fuploads%2FwWaVXxNi0awSJa2UVJ8D%2Fimage.png?alt=media&amp;token=0fe65cb6-b349-40a7-a175-7721305a9feb" alt=""><figcaption><p>Metabase login page</p></figcaption></figure>

If this is your first time logging into Metabase, you may use the following default credentials:

* Username: <user@opencrvs.org>
* Password: m3tabase

<mark style="color:red;">**We strongly recommend changing these default credentials as your first customisation task!**</mark>

### Updating the map used in geographical visualisations

Several dashboard visualisations rely on regional maps. The country configuration starter project ([`opencrvs-countryconfig`](https://github.com/opencrvs/opencrvs-countryconfig)) provides an example map located at `src/api/dashboards/file/farajaland-map.geojson`.

<figure><img src="https://2365243258-files.gitbook.io/~/files/v0/b/gitbook-x-prod.appspot.com/o/spaces%2FCCxReqNLi05GgVKnwb07%2Fuploads%2FnPLWatAlrp1NYTF1mcBz%2Fimage.png?alt=media&amp;token=de85d068-6a21-4dc5-8d7c-aeeffa9cf441" alt=""><figcaption></figcaption></figure>

The simplest method to customise this map is by modifying the GeoJSON file's content. The map should automatically update upon your next deployment.\
\
Should you wish to rename the file or alter the API path from which it is served, proceed to the Admin Settings by clicking the cog-icon at the top right corner of Metabase, and then navigate to "Maps". In this section, you can set up the source for the map visualisation that Metabase utilises.

<figure><img src="https://2365243258-files.gitbook.io/~/files/v0/b/gitbook-x-prod.appspot.com/o/spaces%2FCCxReqNLi05GgVKnwb07%2Fuploads%2FGNVsduPVi2Xmfu6KIyao%2Fimage.png?alt=media&amp;token=a66a4457-be8b-4bb4-877e-88ff38ed5101" alt=""><figcaption></figcaption></figure>

More information about customising dashboards and creating visualisations can be found from [the Metabase documentation](https://www.metabase.com/docs/latest/).

After customising the dashboards to suit your country's requirements, return to the terminal window where `yarn start` was executed. Press `Ctrl + C` to indicate that you are ready to save the configuration changes you've made. Following this action, you should observe a modification in the file `dashboards/metabase.init.db.sql`.

```bash
❯ git status
On branch master
Your branch is up to date with 'origin/master'.

Changes not staged for commit:
  (use "git add <file>..." to update what will be committed)
  (use "git restore <file>..." to discard changes in working directory)
        modified:   dashboards/metabase.init.db.sql

no changes added to commit (use "git add" and/or "git commit -a")
```

This file should then be placed in the path `infrastructure/metabase/metabase.init.db.sql` within your country configuration repository. **It is important not to commit these file changes to opencrvs-core!** You should see your updated dashboards after you deploy the changed file.

Next, update the map name and URL environment variables in [infrastructure/docker-compose.deploy.yml](https://github.com/opencrvs/opencrvs-countryconfig/blob/7be22de4d2bf8821329f5122e436958f7eff8872/infrastructure/docker-compose.deploy.yml#L969) along with whatever region key you use for the mouse interaction and data disaggregation.  Usually the key will always be "State" and the name can be customised to suit your country.:

```
- OPENCRVS_METABASE_MAP_NAME=Farajaland
- OPENCRVS_METABASE_MAP_URL=http://countryconfig:3040/content/farajaland-map.geojson
- OPENCRVS_METABASE_MAP_REGION_KEY=State
- OPENCRVS_METABASE_MAP_REGION_NAME=State
```

#### Dashboards not updating after deployment

Note that the file we just generated is only for initialising an empty Metabase instance. If your environment already had OpenCRVS running before your deployment, Metabase has been initialised with the previous init file. To re-initialise your dashboards, please follow the next steps.&#x20;

<mark style="color:red;">Before you do this, make sure there are no configurations that were done manually through the Metabase UI. These changes will be overwritten with your new init file and</mark> <mark style="color:red;"></mark><mark style="color:red;">**all changes to Metabase will be lost permanently**</mark><mark style="color:red;">.</mark>

1. SSH into the manager node of your server fleet
2. Run `docker service scale opencrvs_dashboards=0` to stop the dashboards service
3. `sudo rm /data/metabase/*`
4. Run `docker service scale opencrvs_dashboards=1` to start the dashboards again

After this you should see your changes just as they are in version control.


---

# Agent Instructions
This documentation is published with GitBook. GitBook is the documentation platform designed so that both humans and AI agents can read, navigate, and reason over technical content effectively. Learn more at gitbook.com.

## Querying This Documentation
If you need additional information that is not directly available in this page, you can query the documentation dynamically by asking a question.

Perform an HTTP GET request on the current page URL with the `ask` query parameter, and the optional `goal` query parameter:

```
GET https://documentation.opencrvs.org/v1.4/setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.5-set-up-application-settings/4.2.5.2-configuring-metabase-dashboards.md?ask=<question>&goal=<endgoal>
```

`ask` is the immediate question: it should be specific, self-contained, and written in natural language.
`goal` is optional and describes the broader end goal you are ultimately trying to accomplish on behalf of the user. GitBook uses it to tailor the answer towards what is most useful for that goal.

The response will contain a direct answer to the question and relevant excerpts and sources from the documentation.

Use this mechanism when the answer is not explicitly present in the current page, you need clarification or additional context, or you want to retrieve related documentation sections.
